# easternmind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
easternmind/: config.ini.sample  manage.py  tailwind.config.js
easternmind/assets/css/: input.css  output.css
easternmind/assets/js/: main.js
easternmind/easternmind/: asgi.py  settings.py  urls.py  wsgi.py
easternmind/main/: models.py  views.py
easternmind/main/migrations/: 0001_initial.py  0002_image_format.py  0003_alter_image_format_alter_image_image.py  0004_alter_image_image.py  0005_image_image_picture_height_image_image_picture_width.py  0006_rename_image_picture_height_image_height_field_and_more.py  0007_remove_image_description_remove_image_format_and_more.py  0008_image_description_image_format.py
easternmind/pages/: _base.html  index.html
nginx/: nginx.conf  nossl.conf.disabled  ssl.conf.disabled
